# course_2

./: main.py  pyproject.toml
data/: vacancies_test.json
src/: api_base.py  classes.py  file_base.py  hh.py  hh_api.py  json_saver.py  user_interface.py  utils.py  vacancy.py
