[project]
name = "course-2"
version = "0.1.0"
description = "Проект 2. Поиск вакансий"
authors = [
    {name = "Kirill Gladkikh",email = "k.gladkikh@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Конфигурация линтеров:
[tool.black]
# Максимальная длина строки
line-length = 119
# Файлы, которые не нужно форматировать
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.mypy]
disallow_untyped_defs = true
# no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[tool.isort]
# максимальная длина строки
line_length = 119
[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.9.0"
mypy = "^1.18.2"
isort = "^7.0.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^7.0.0"

